# vulkan-demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ReadME.md
shaders/: example_shader.frag  example_shader.vert
src/: Application.cpp  Log.cpp  Log.h  application.h  application.hpp  main.cpp  samp.cpp  v_demo_window.cpp  v_demo_window.hpp  vd_instance.cpp  vd_instance.h  vd_pipeline.cpp  vd_pipeline.h  vd_window.cpp  vd_window.h
